// conformancelib/build.gradle

buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java-library'
    id 'org.ajoberstar.grgit' version '2.1.0'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id "de.jjohannes.extra-java-module-info" version "0.1"
}

java {
    modularity.inferModulePath.set(true)
}

apply plugin: 'java-library'
apply plugin: 'eclipse'
apply plugin: 'com.github.johnrengelman.shadow'

targetCompatibility = JavaVersion.VERSION_11
sourceCompatibility = JavaVersion.VERSION_11

logger.warn("target java version: " + targetCompatibility)
logger.warn("source java version: " + sourceCompatibility)

//import org.gradle.plugins.ide.eclipse.model.AccessRule

eclipse {
    classpath {
        file {
            whenMerged {
                //def jre = entries.find { it.path.contains 'org.eclipse.jdt.launching.JRE_CONTAINER' }
                //jre.accessRules.add(new AccessRule('0', 'javax/smartcardio/**'))
                //def lib = entries.find { it.path.contains '.' }
                //println '--> ' + lib
                //lib.sourcePath = fileReference(file('../libs/gov.gsa.pivconformance.conformancelib-sources' + '-' + getVersion() + '.jar'))
            }
        }
    }
}

repositories {
    jcenter()
    mavenCentral()
    maven { url 'https://repository.apache.org/snapshots' }
    flatDir {
        dirs '../cardlib/build/libs'
    }
}

def getVersion = { ->
    File resourcesDir = new File(project.getProjectDir(), 'src/main/resources/')
    File versionFile = new File(resourcesDir, 'build.version')
    if(!versionFile.exists()) {
        resourcesDir.mkdirs()
        versionFile.createNewFile()
        println 'Initializing build.version file'
        versionFile.text = '0.0-changeme'
    }
    String version = versionFile.text.replaceAll("[\\n\\r\\t ]", "")
}

// custom task from
// https://stackoverflow.com/questions/39444908/how-to-create-an-html-report-for-junit-5-tests
// to get readable output for passing tests
configurations {
    junitXmlToHtml
}
dependencies {
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.66'
    implementation 'commons-cli:commons-cli:1.4'
    implementation 'org.apache.commons:commons-csv:1.8'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
    implementation 'ch.qos.logback:logback-core:1.3.0-alpha5'
    implementation 'org.xerial:sqlite-jdbc:3.32.3.2'
    implementation 'org.apache.ibatis:ibatis-core:3.0'
    implementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    implementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    implementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
    implementation 'org.junit.platform:junit-platform-launcher:1.7.0'
    implementation 'junit:junit:4.13'

    implementation 'info.picocli:picocli:3.6.0'
    implementation 'gov.gsa:gov.gsa.pivconformance.cardlib:' + getVersion()

    // Required by IDE while running unit tests
    testCompile 'org.junit.vintage:junit-vintage-engine:5.7.0'

    junitXmlToHtml 'org.apache.ant:ant-junit:1.10.8'
}

jar {
    doFirst {
        version = getVersion()
    }
    manifest {
         attributes(
 		'Manifest-Version': '0.2.2-beta',
 		'Created-By': 'General Services Administration',
 		'Automatic-Module-Name': 'gov.gsa.pivconformance.conformancelib',
 		'Multi-Release': 'false',
 		'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
 		'Implementation-Title': 'gov.gsa.pivconformance.conformancelib',
 		'Implementation-Version': '0.2.2-beta',
 		'Implementation-Vendor': 'General Services Administration',
 		'Bundle-ManifestVersion' : '2',
 		'Bundle-SymbolicName': 'gov.gsa.pivconformance.conformancelib',
 		'Bundle-Name': 'gov.gsa.pivconformance.conformancelib',
 		'Bundle-Vendor': 'gov.gsa',
 		'Bundle-RequiredExecutionEnvironment': 'JavaSE-11',
 		'Export-Package': 'gov.gsa.pivconformance.conformancelib;version=0.2.2-beta,gov.gsa.pivconformance.conformancelib.test;version=0.2.2-beta,gov.gsa.pivconformance.conformancelib.configuration;version=0.2.2-beta,gov.gsa.pivconformance.conformancelib.junitoptions;version=0.2.2-beta,gov.gsa.pivconformance.conformancelib.tests;version=0.2.2-beta,gov.gsa.pivconformance.conformancelib.tools.junitoptions;version=0.2.2-beta,gov.gsa.pivconformance.conformancelib.utilities;version=0.2.2-beta',
 		'Import-Package': '*',
 		'Specification-Title': 'gov.gsa.pivconformance.conformancelib',
 		'Specification-Version': '0.2.2-beta',
 		'Specification-Vendor': 'General Services Administration',
 		'Sealed': 'false'
         )
    }
    doLast {
        println 'archiveName: ' + archiveName
/*`
configuration ':annotationProcessor'
configuration ':api'
configuration ':apiElements'
configuration ':archives'
configuration ':compile'
configuration ':compileClasspath'
configuration ':compileOnly'
configuration ':default'
configuration ':implementation'
configuration ':junitXmlToHtml'
configuration ':runtime'
configuration ':runtimeClasspath'
configuration ':runtimeElements'
configuration ':runtimeOnly'
configuration ':shadow'
configuration ':testAnnotationProcessor'
configuration ':testCompile'
configuration ':testCompileClasspath'
configuration ':testCompileOnly'
configuration ':testImplementation'
configuration ':testRuntime'
configuration ':testRuntimeClasspath'
configuration ':testRuntimeOnly'
*/
        //configurations.default.each { println it } WORKS
        configurations.testRuntimeClasspath.each { println it }
/*
testRuntime
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-engine/1.7.0/eadb73c5074a4ac71061defd00fc176152a4d12c/junit-platform-engine-1.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-commons/1.7.0/84e309fbf21d857aac079a3c1fffd84284e1114d/junit-platform-commons-1.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.vintage/junit-vintage-engine/5.7.0/2b808fa5dbbf0b0e16bce19d9936ef78333a030e/junit-vintage-engine-5.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.apiguardian/apiguardian-api/1.1.0/fc9dff4bb36d627bdc553de77e1f17efd790876c/apiguardian-api-1.1.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/junit/junit/4.13/e49ccba652b735c93bd6e6f59760d8254cf597dd/junit-4.13.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.opentest4j/opentest4j/1.2.0/28c11eb91f9b6d8e200631d46e20a7f407f2a046/opentest4j-1.2.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.hamcrest/hamcrest-core/1.3/42a25dc3219429f0e5d060061f71acb49bf010a0/hamcrest-core-1.3.jar
*/
/*
testRuntimeClasspath
/Users/bob/.gradle/caches/modules-2/files-2.1/org.bouncycastle/bcpkix-jdk15on/1.66/86cca2c1a32775abe92316d9628b7ee50b6f19ad/bcpkix-jdk15on-1.66.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.bouncycastle/bcprov-jdk15on/1.66/ed564ade61defca27e26fb1378a70b22831fc5c1/bcprov-jdk15on-1.66.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/d8459d258643c1d2c182d2ae3572f394/commons-cli-1.4-module.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/cac2cdb235da128a82710643e9aa1fbb/commons-csv-1.8-module.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/commons-codec/commons-codec/1.15/49d94806b6e3dc933dacbd8acb0fdbab8ebd1e5d/commons-codec-1.15.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-classic/1.3.0-alpha5/3195156aa3b62b2f4407a7841700f2759bebf192/logback-classic-1.3.0-alpha5.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/ch.qos.logback/logback-core/1.3.0-alpha5/4f3163d95c96b7be69d9e5245573834fd130a4bb/logback-core-1.3.0-alpha5.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/39283ad96f318e8f10fdd9250859b5e6/sqlite-jdbc-3.32.3.2-module.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/3e1a95f3564ec1fbbcb9ae03f4af9b8a/ibatis-core-3.0-module.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-params/5.7.0/521dbecace93d5d7ef13a74aab231befd7954424/junit-jupiter-params-5.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-launcher/1.7.0/cfd2d9c8b6ff9f3880faad828454cd0166bc12d7/junit-platform-launcher-1.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.vintage/junit-vintage-engine/5.7.0/2b808fa5dbbf0b0e16bce19d9936ef78333a030e/junit-vintage-engine-5.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-engine/1.7.0/eadb73c5074a4ac71061defd00fc176152a4d12c/junit-platform-engine-1.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.platform/junit-platform-commons/1.7.0/84e309fbf21d857aac079a3c1fffd84284e1114d/junit-platform-commons-1.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-engine/5.7.0/d9044d6b45e2232ddd53fa56c15333e43d1749fd/junit-jupiter-engine-5.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.junit.jupiter/junit-jupiter-api/5.7.0/b25f3815c4c1860a73041e733a14a0379d00c4d5/junit-jupiter-api-5.7.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/junit/junit/4.13/e49ccba652b735c93bd6e6f59760d8254cf597dd/junit-4.13.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/info.picocli/picocli/3.6.0/658e0dce77754c7df1e770c246aea0d25808dca7/picocli-3.6.0.jar
/Users/bob/IdeaProjects/piv-conformance/cardlib/build/libs/gov.gsa.pivconformance.cardlib-0.2.2-beta.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.slf4j/slf4j-api/2.0.0-alpha1/e979781e847d44d3618c4479d438956593b6b080/slf4j-api-2.0.0-alpha1.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/com.sun.mail/javax.mail/1.6.2/935151eb71beff17a2ffac15dd80184a99a0514f/javax.mail-1.6.2.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/5dddf02d07a3829a1fcc0f7729365953/checker-framework-1.7.0-module.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.apiguardian/apiguardian-api/1.1.0/fc9dff4bb36d627bdc553de77e1f17efd790876c/apiguardian-api-1.1.0.jar
/Users/bob/.gradle/caches/modules-2/files-2.1/org.opentest4j/opentest4j/1.2.0/28c11eb91f9b6d8e200631d46e20a7f407f2a046/opentest4j-1.2.0.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/8e5a4261f05a0c1a6d58040aca090aed/hamcrest-core-1.3-module.jar
/Users/bob/.gradle/caches/transforms-2/files-2.1/681427822f666f6d1e944aa6970eacff/activation-1.1-module.jar
*/
    }
}

extraJavaModuleInfo {
    automaticModule("ber-tlv-1.0-11.jar","com.payneteasy")
    automaticModule("slf4j-api-2.0.0-alpha1.jar", "org.slf4j")
    automaticModule("hamcrest-core-1.3.jar","org.hamcrest")
    automaticModule("commons-cli-1.4.jar","org.apache.commons.cli")
    automaticModule("commons-codec-1.15.jar","org.apache.commons.codec")
    automaticModule("commons-csv-1.8.jar","org.apache.commons.csv")
    automaticModule("logback-classic-1.3.0-alpha5.jar", "ch.qos.logback")
    automaticModule("logback-core-1.3.0-alpha5.jar", "ch.qos.logback")
    automaticModule("junit-4.13.jar", "junit")
    automaticModule("ibatis-core-3.0.jar","org.apache.ibatis")
    automaticModule("sqlite-jdbc-3.32.3.2.jar","org.xerial")
    automaticModule("activation-1.1.jar","javax.activation")
    automaticModule("checker-framework-1.7.0.jar","edu.washington.cs.types.checker")
}

compileJava {
    options.debugOptions.debugLevel = "source,lines,vars"
    String moduleName = "";
    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
        moduleName = 'gov.gsa.pivconformance.conformancelib'
        inputs.property("moduleName", moduleName)
        println 'compileJava.moduleName and version: ' + moduleName + '-' + getVersion()
    }

    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-exports', 'org.junit.platform.commons/org.junit.platform.commons.util=gov.gsa.pivconformance.conformancelib'
        ]
        classpath = files()
    }
}

compileTestJava {
    String moduleName = "";
    if(targetCompatibility >= (String) JavaVersion.VERSION_11) {
        moduleName = 'gov.gsa.pivconformance.conformancelib.test'
        version = getVersion()
        inputs.property("moduleName", moduleName)
    }
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'org.junit.jupiter.api',
                '--add-reads', "$moduleName=org.junit.jupiter.api",
                '--add-exports', 'org.junit.platform.commons/org.junit.platform.commons.util=gov.gsa.pivconformance.conformancelib',
                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath
        ]
        classpath = files()
    }
}

test {
    version = getVersion()
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

//junitPlatform { }

compileJava {
    options.debugOptions.debugLevel = "source,lines,vars"
}

task sourceJar(type: Jar, dependsOn: classes) {
    classifier 'sources'
    from sourceSets.main.allSource
}

task copyShadowLibs(type: Copy) {
    from configurations.shadow
    into '../libs'
}

shadowJar.dependsOn copyShadowLibs

shadowJar.doFirst {
    version = getVersion()
    println 'shadowJar.doFirst.archveName: ' + archiveName
}

task installSource(type: Copy) {
    dependsOn copyShadowLibs
    dependsOn sourceJar
    from sourceJar
    into '../libs' 
}

task install(type: Copy) {
    version = getVersion()
    dependsOn jar
    dependsOn shadowJar
    from jar
    into '../libs' 
}
